Fixed yaxis issue where the values were out of bound.

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,3 +18,10 @@ code {
 #{$class_css_prefix}main {
   // padding: 10px;
 }
+
+#{$class_css_prefix}wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
