--- a/src/components/charts/basic-line-chart/BasicLineChart.scss
+++ b/src/components/charts/basic-line-chart/BasicLineChart.scss
@@ -2,14 +2,13 @@ $css_prefix: "c--c--b-l-c__";
 $class_css_prefix: ".#{$css_prefix}";
 
 #{$class_css_prefix}main {
-  padding: 10px;
   background-color: #2c3e50;
 }
 
 #{$class_css_prefix}x-axis {
-  color: white;
+  color: #ecf0f1;
 }
 
 #{$class_css_prefix}y-axis {
-  color: white;
+  color: #ecf0f1;
 }
